kubernetes/apps/observability/goldilocks/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  annotations:
    gatus.home-operations.com/endpoint: 'dns: { query-name: goldilocks.unscfleet.com }'
spec:
  hostnames: ["goldilocks.unscfleet.com"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          namespace: observability
          port: 80
